# notes

./: AGENTS.md  Cargo.toml  README.md  dev  dev.sh
core/: AGENTS.md  Cargo.toml
core/src/: graph.rs  lib.rs  main.rs  note.rs
core/tests/: cli.rs  graph.rs  note.rs
gui/: AGENTS.md  Cargo.toml
gui/src/: main.rs
notes/: Another Note With Spaces.md  foop.md.md  fwoop.md  poof.md
src/: graph.rs  gui.rs  main.rs  note.rs
