[package]
name = "notes-gui"
version = "0.1.0"
edition = "2024"
default-run = "notes-gui"

[dependencies]
notes-core = { path = "../core" }
gtk4 = "0.9"
vte4 = "0.8"
cairo-rs = "0.20"
open = "5"
twox-hash = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
directories = "6"
